# MiraScript

./: .gitignore  .npmrc  Cargo.toml  PLAN.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.ps1  trust.ps1  tsconfig.json
benches/: lexer.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/constants/: Cargo.toml
crates/constants/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: compile.rs  lexer.rs  main.rs
crates/core/src/: arena.rs  compile.rs  config.rs  lib.rs  main.rs
crates/core/src/analyzer/: block.rs  closure.rs
crates/core/src/compile/: encode_diagnostics.rs  mod.rs  recover_token.rs
crates/core/src/config/: mod.rs
crates/core/src/diagnostic/: diagnostic_code.rs  diagnostics_collector.rs  encode_diagnostics.rs  mod.rs  source_diagnostic.rs
crates/core/src/emitter/: chunk.rs  closure.rs  constant.rs  emitter_closure.rs  emitter_codes.rs  emitter_expression.rs  emitter_pattern.rs  emitter_pub.rs  emitter_scope.rs  emitter_statement.rs  emitter_struct.rs  mod.rs  opcode.rs  scope.rs  static_checker.rs  utils.rs  variable.rs
crates/core/src/error/: error_code.rs  mod.rs
crates/core/src/formatter/: array_element.rs  block.rs  callable.rs  else_block.rs  expression.rs  iterable.rs  list_items.rs  mod.rs  parameter_list.rs  pattern.rs  range.rs  record_element.rs  statement.rs  token.rs  types.rs
crates/core/src/formatter/manager/: mod.rs  token.rs  trivia.rs  types.rs
crates/core/src/lexer/: char_count.rs  identifier.rs  keyword.rs  mod.rs  numeric.rs  operator.rs  string.rs  token.rs  token_kind.rs  tokens.rs  trivia.rs
crates/core/src/parser/: arena.rs  array_element.rs  array_helper.rs  ast_visitor.rs  basic_expressions.rs  block_expressions.rs  expression.rs  expressions.rs  helper.rs  iterable.rs  iterables.rs  json_expressions.rs  list_item.rs  mod.rs  parameter_list.rs  pattern.rs  patterns.rs  range.rs  ranges.rs  record_element.rs  record_helper.rs  script.rs  scripts.rs  statement.rs  statements.rs  token_ref.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
crates/python/: .gitignore  Cargo.toml  Dockerfile  MANIFEST.in  README.md  __main__.py  out_script.py  out_script2.py  publish.ps1  pyproject.toml  requirements.txt  setup.py
crates/python/mirascript/: Untitled-2.json  __init__.py  __main__.py  deep_nonlocal_fix.py  diagnostics.py  emit.py  main.py  mirascript.pyi  operations.py  subtle.py  version.py
crates/python/mirascript/_compiler/: __init__.py  ast_helper.py  consts.py  core.pyi  diagnostics.py  emit.py  emitter.py  opcode.py  script.py
crates/python/mirascript/_helpers/: checker.py  constants.py  serialize.py  types.py
crates/python/mirascript/_helpers/convert/: __init__.py  to_boolean.py  to_format.py  to_number.py  to_string.py
crates/python/mirascript/_vm/: __init__.py  error.py
crates/python/mirascript/_vm/lib/: _helpers.py  _helpers_utils.py  _loader.py
crates/python/mirascript/_vm/lib/vm_global/: __init__.py  bit.py  debug.py  json.py  json_.py  string.py  time.py  time_.py  to_primitive.py
crates/python/mirascript/_vm/lib/vm_global/math/: __init__.py  _helper.py  arr.py  const.py  gamma.py  math.py  round.py  to_int.py  unary.py
crates/python/mirascript/_vm/lib/vm_global/mod/: __init__.py  _matrix.py
crates/python/mirascript/_vm/lib/vm_global/sequence/: __init__.py  all_any.py  entries.py  find.py  flatten.py  len.py  map_filter.py  new.py  repeat.py  reverse.py  sort.py  unique.py  with_.py  zip.py
crates/python/mirascript/_vm/operations/: __init__.py  array_range.py  call.py  common.py  compound.py  convert.py  cp.py  helpers.py  operator.py  slice.py  type_check.py  utils.py
crates/python/mirascript/_vm/types/: __init__.py  context.py  function.py  module.py  types.py  wrapper.py
crates/python/mirascript/compiler/: __init__.py  ast_helper.py  consts.py  deep_nonlocal_fix.py  diagnostics.py  emit.py  emitter.py  opcode.py  script.py
crates/python/mirascript/helpers/: checker.py  constants.py  serialize.py  types.py
crates/python/mirascript/helpers/convert/: to_boolean.py  to_format.py  to_number.py  to_string.py
crates/python/mirascript/vm/: VmWrapper.py  __init__.py  env.py  error.py  helpers.py  operations.py
crates/python/mirascript/vm/lib/: _helpers.py  _helpers_utils.py  _loader.py
crates/python/mirascript/vm/lib/global/sequence/: len.py
crates/python/mirascript/vm/lib/vm_global/: __init__.py  bit.py  debug.py  json.py  json_.py  math.py  math_additional.py  math_arr.py  math_const.py  math_unary.py  string.py  time_.py  to_primitive.py
crates/python/mirascript/vm/lib/vm_global/math/: _helper.py  arr.py  const.py  gamma.py  round.py  unary.py
crates/python/mirascript/vm/lib/vm_global/mod/: __init__.py  __init__.py.py  _matrix.py  matrix.py
crates/python/mirascript/vm/lib/vm_global/sequence/: __init__.py  all-any.py  all_any.py  entries.py  find.py  flatten.py  len.py  map-filter.py  map_filter.py  new.py  repeat.py  reverse.py  sort.py  unique.py  with.py  with_.py  zip.py
crates/python/mirascript/vm/operations/: __init__.py  array_range.py  call.py  common.py  compound.py  convert.py  cp.py  helpers.py  operator.py  slice.py  type_check.py  utils.py
crates/python/mirascript/vm/types/: __init__.py  checker.py  const.py  context.py  extern.py  function.py  module.py  script.py  types.py  wrapper.py
crates/python/src/: lib.rs
crates/python/tests/: black-box.py  black_box.py  conftest.py  debug.py  deepequals.py  print_env.py  test_black_box.py  test_cli.py  test_constants.py  test_deepequals.py  test_serialize.py  test_snapshot.py
crates/python/tests/snapshots/test_snapshot/test_module_exports/: exports.txt
crates/python/tests/snapshots/test_snapshot/test_shared_context_keys/: shared_context_keys.txt
crates/python/tools/mirascript_bump/: __main__.py
crates/wasm/: .gitignore  Cargo.toml  build.ps1
crates/wasm/src/: compile.rs  constants.rs  lib.rs  monaco.rs  utils.rs
doc/: SPEC.md
docs/: 99-cheatsheet.md  CHEATSHEET.md  SPEC.md  cheatsheet.md  spec.md
(+459 files in other folders)
