[package]
name = "mira-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "mira"
path = "src/main.rs"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
mira-core = { path = "../core", features = [] }
mimalloc = { version = "0.1", optional = true }
ariadne = { version = "0.5", features = ["auto-color"] }
