[package]
name = "mira-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mira_core"

[[bench]]
name = "main"
harness = false

[features]
default = []
track_references = []
formatter = []
wasm = ["dep:wasm-bindgen"]
serde = ["dep:serde"]

[dev-dependencies]
divan = "0.1.21"
mimalloc = "0.1"
mira-core = { path = "." }

[dependencies]
unicode-ident = "1.0"
winnow = "0.7"
strum = { version = "0.27", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
