[package]
name = "mira-core"
version = "0.1.71"
edition = "2024"
publish = false

[lib]
name = "mira_core"

[[bench]]
name = "main"
harness = false

[features]
default = []
formatter = []
wasm = ["dep:wasm-bindgen"]
wasm-constants = ["dep:wasm-bindgen"]
serde = ["dep:serde"]

[dev-dependencies]
divan = "0.1.21"
mimalloc = "0.1"
mira-core = { path = "." }

[dependencies]
unicode-ident = "1.0"
winnow = { version = "1" }
strum = { version = "0.28", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
