[package]
name = "mira-core"
version = "0.1.76"
edition = "2024"
publish = false

[lib]
name = "mira_core"

[[bench]]
name = "main"
harness = false

[features]
default = []
formatter = []
wasm = ["dep:wasm-bindgen"]
wasm-constants = ["dep:wasm-bindgen"]
serde = ["dep:serde"]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
divan = "0.1.21"
mira-core = { path = ".", features = ["mimalloc"] }

[dependencies]
unicode-ident = "1"
winnow = "1"
strum = { version = "0.28", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = { version = "0.1", optional = true, features = [] }
[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1", optional = true, features = ["v2"] }
