[package]
name = "napi"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
mimalloc = { version = "0.1", optional = true }
mira-core = { path = "../core", features = ["serde"] }

[build-dependencies]
napi-build = "2"
