[package]
name = "mira-napi"
version = "0.1.75"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]
mimalloc = ["mira-core/mimalloc"]

[dependencies]
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
mira-core = { path = "../core", features = ["serde"] }

[build-dependencies]
napi-build = "2"
