[package]
name = "mirascript"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
serde = "1"
mimalloc = { version = "0.1", optional = true }
mira-core = { path = "../core", features = ["serde"] }
pyo3 = { version = "0.27", features = ["abi3-py37"] }
