[package]
name = "mira-python"
version = "0.1.72"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mirascript"
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]
mimalloc = ["mira-core/mimalloc"]

[dependencies]
serde = "1"
mira-core = { path = "../core", features = ["serde"] }
pyo3 = { version = "0.29", features = ["abi3-py38", "abi3t-py315"] }
