[project]
name = "mirascript"
dynamic = ["version"]
description = "MiraScript 的 Python 绑定允许在 Python 中使用 MiraScript 编译器。它提供了一个简单的接口来编译 MiraScript 脚本，并返回编译结果和诊断信息。"
keywords = ["mirascript", "language", "compiler", "runtime", "vm"]
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "CloudPSS", email = "zhangdaming@cloudpss.net" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Code Generators",
]
dependencies = ["typing-extensions>=4.7.1"]

[project.scripts]
mirascript = "mirascript.__main__:main"

[project.urls]
Repository = "https://github.com/CloudPSS/MiraScript"
Documentation = "https://mira.cloudpss.net/"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"

[tool.poe.tasks]
init = "maturin develop"
test = "python -m unittest -b -c tests.black_box"
test37 = "python3.7 -m unittest -b -c tests.black_box"
format = "black ."
check = "pyright ."
debug = { cmd = "python -m mirascript -g debug_output.py", cwd = "${POE_CWD}" }
