[project]
name = "mirascript"
dynamic = ["version"]
description = "MiraScript 是 CloudPSS 维护的表达式优先脚本语言项目。Python 绑定用于在 Python 中调用 MiraScript 编译器能力，支持脚本编译与执行。"
keywords = ["mirascript", "language", "compiler", "runtime", "vm"]
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "CloudPSS", email = "zhangdaming@cloudpss.net" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typing-extensions>=4.7.1",
    "astunparse>=1.6.3;python_version<'3.9'",
]

[project.scripts]
mirascript = "mirascript.__main__:main"

[project.urls]
Repository = "https://github.com/CloudPSS/MiraScript"
Documentation = "https://mira.cloudpss.net/"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "mirascript._compiler.core"

[tool.uv]
environments = ["python_version>='3.10'"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "maturin>=1.14.1",
    "poethepoet>=0.48.0",
    "pyright>=1.1.411",
]

[tool.poe.tasks]
init = "maturin develop"
test = "python -m unittest -b -c tests.black_box"
format = "black ."
check = "pyright ."
debug = { cmd = "python -m mirascript -g debug_output.py", cwd = "${POE_CWD}" }
