[package]
name = "mira-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error", "track_references"]
console_error = ["dep:console_error_panic_hook"]
track_references = ["mira-core/track_references"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies]
wasm-bindgen = "0.2"
mira-core = { path = "../core", features = ["wasm"] }
strum = "0.27"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
