[package]
name = "wasm"
description = "MiraScript compiler for WebAssembly"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O4"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error", "track_references", "trivia"]
console_error = ["dep:console_error_panic_hook"]
track_references = ["mira-core/track_references"]
trivia = ["mira-core/trivia"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies]
wasm-bindgen = "0.2"
mira-core = { path = "../core", features = ["wasm"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
